<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#EA80FC"
    tools:context="com.snehil.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_header"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="2dp"
        android:textColor="#4A148C"
        />

    <Button
        android:id="@+id/button_popular_movies"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:text="@string/button_popular_movies"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:background="#AA00FF"
        android:layout_margin="2dp"
        android:textColor="#F3E5F5"
        />

    <Button
        android:id="@+id/button_stock_hawk"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:text="@string/button_stock_hawk"
        android:layout_weight="1"
        android:background="#AA00FF"
        android:layout_margin="2dp"
        android:textColor="#F3E5F5"
        />

    <Button
        android:id="@+id/button_build_bigger"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:text="@string/button_build_bigger"
        android:layout_weight="1"
        android:background="#AA00FF"
        android:layout_margin="2dp"
        android:textColor="#F3E5F5"
        />

    <Button
        android:id="@+id/button_make_material"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:text="@string/button_make_material"
        android:layout_weight="1"
        android:background="#AA00FF"
        android:layout_margin="2dp"
        android:textColor="#F3E5F5"
        />

    <Button
        android:id="@+id/button_ubiquitous"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:text="@string/button_ubiquitous"
        android:layout_weight="1"
        android:background="#AA00FF"
        android:layout_margin="2dp"
        android:textColor="#F3E5F5"
        />


    <Button
        android:id="@+id/button_capstone"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:text="@string/button_capstone"
        android:layout_weight="1"
        android:background="#AA00FF"
        android:layout_margin="2dp"
        android:textColor="#F3E5F5"
        />
</LinearLayout>
